# cmake-node-starter

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  example.d.ts  index.js  package.json
src/: example.cpp  example.hpp  lib.cpp  lib.hpp
